# weighted-pretty

./: LICENSE  stack.yaml  weighted-pretty.cabal
src/Data/Text/: WeightedPretty.hs
